--- a/public/index.html
+++ b/public/index.html
@@ -11,37 +11,34 @@
 <body>
   <div class="container">
     <div class="text">Summary Snapshot with Metadata Insights</div>
-    <form action="#">
+    <form action="#" onsubmit="search(); return false;">
       <div class="form-row">
         <div class="input-data">
-          <input type="text" required>
+          <input type="text" id="paper-id" required>
           <div class="underline"></div>
           <label for="">Paper Id</label>
         </div>
-
       </div>
       <div class="form-row">
         <div class="input-data">
-          <select required>
-            <option value="General">General</option>
-            <option value="Simplified">Simplified</option>
-            <option value="Scientific">Scientific</option>
-            <option value="Technical">Technical</option>
-            <option value="Medical">Medical</option>
+          <select id="type-dropdown" required>
+            <option value="general">General</option>
+            <option value="simplified">Simplified</option>
+            <option value="scientific">Scientific</option>
+            <option value="technical">Technical</option>
+            <option value="medical">Medical</option>
           </select>
           <div class="underline"></div>
-
         </div>
         <div class="input-data">
-          <select required>
-            <option value="English">English</option>
-            <option value="Bosnian">Bosnian</option>
-            <option value="German">German</option>
+          <select id="lang-dropdown" required>
+            <option value="english">English</option>
+            <option value="bosnian">Bosnian</option>
+            <option value="german">German</option>
           </select>
           <div class="underline"></div>
         </div>
       </div>
-
       <div class="form-row submit-btn">
         <div class="input-data">
           <div class="inner"></div>
@@ -49,7 +46,12 @@
         </div>
       </div>
     </form>
+    <div id="result-container" style="display:none;">
+      <div id="summary-content"></div>
+      <div id="info-content"></div>
+    </div>
   </div>
+  <script src="index.js"></script>
 </body>
 
 </html>
