--- a/public/index.html
+++ b/public/index.html
@@ -21,9 +21,9 @@
       </div>
       <div class="form-row">
         <div class="input-data">
-          <select required>
-            <option value="Simplified">Simplified</option>
-            <option value="Scientific">Scientific</option>
+          <select id="type-dropdown" required>
+            <option value="simplified">Simplified</option>
+            <option value="scientific">Scientific</option>
           </select>
           <div class="underline"></div>
         </div>
